Kubernetes/animal-album-manifests/ui-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: animal-album
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ui-service
  type: ClusterIP
